--- a/Shopthoitrang/admin.html
+++ b/Shopthoitrang/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fashion Shop - Quản trị</title>
+  <title>DTN Shop - Quản trị</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 font-sans text-gray-800 min-h-screen flex flex-col">
@@ -14,13 +14,15 @@
     <!-- Sidebar -->
     <aside class="w-64 bg-white shadow-md h-auto min-h-screen">
       <div class="p-6 border-b">
-        <h1 class="text-xl font-bold text-gray-800">Fashion Shop</h1>
+        <h1 class="text-xl font-bold text-gray-800">DTN Shop</h1>
         <p class="text-sm text-gray-500">Quản trị</p>
       </div>
       <nav class="mt-6 space-y-2 px-4">
         <a href="/Shopthoitrang/admin-products.html" class="block py-2 px-4 rounded hover:bg-indigo-100 text-gray-700 font-medium">Sản phẩm</a>
         <a href="/Shopthoitrang/admin-danh-muc.html" class="block py-2 px-4 rounded hover:bg-indigo-100 text-gray-700 font-medium">Danh mục</a>
-        <a href="#" class="block py-2 px-4 rounded hover:bg-indigo-100 text-gray-700 font-medium">Khách hàng</a>
+        <a href="/Shopthoitrang/admin-khachhang.html" class="block py-2 px-4 rounded hover:bg-indigo-100 text-gray-700 font-medium">Khách hàng</a>
+        <a href="/Shopthoitrang/admin-thanhtoan.html" class="block py-2 px-4 mt-4 text-indigo-600 hover:text-indigo-800 font-semibold">Quản lý thanh toán</a>
+        <a href="/Shopthoitrang/admin-lichsudonhang.html" class="block py-2 px-4 mt-4 text-indigo-600 hover:text-indigo-800 font-semibold">Lịch sử đơn</a>
         <a href="/Shopthoitrang/trang-chu.html" class="block py-2 px-4 mt-4 text-indigo-600 hover:text-indigo-800 font-semibold">Về trang chủ</a>
       </nav>
     </aside>
