--- a/Shopthoitrang/admin-products.html
+++ b/Shopthoitrang/admin-products.html
@@ -23,11 +23,12 @@
     <!-- Sidebar -->
     <aside class="w-64 bg-white shadow-md p-4">
       <nav class="space-y-4">
-        <a href="/Shopthoitrang/admin-products.html" class="block text-gray-700 hover:text-blue-500 font-medium">Sản phẩm</a>
-        <a href="/Shopthoitrang/admin.html" class="block text-gray-700 hover:text-blue-500 font-medium">Danh mục</a>
-        <a href="/Shopthoitrang/trang-chu.html" class="block text-gray-700 hover:text-blue-500 font-medium">Khách hàng</a>
-        <a href="/Shopthoitrang/trang-chu.html" class="block text-gray-700 hover:text-blue-500 font-medium">Trang chủ</a>
-        
+        <a href="/Shopthoitrang/admin-products.html" class="block py-2 px-4 rounded hover:bg-indigo-100 text-gray-700 font-medium">Sản phẩm</a>
+        <a href="/Shopthoitrang/admin-danh-muc.html" class="block py-2 px-4 rounded hover:bg-indigo-100 text-gray-700 font-medium">Danh mục</a>
+        <a href="/Shopthoitrang/admin-khachhang.html" class="block py-2 px-4 rounded hover:bg-indigo-100 text-gray-700 font-medium">Khách hàng</a>
+        <a href="/Shopthoitrang/admin-thanhtoan.html" class="block py-2 px-4 mt-4 text-indigo-600 hover:text-indigo-800 font-semibold">Quản lý thanh toán</a>
+        <a href="/Shopthoitrang/admin-lichsudonhang.html" class="block py-2 px-4 mt-4 text-indigo-600 hover:text-indigo-800 font-semibold">Lịch sử đơn</a>
+        <a href="/Shopthoitrang/trang-chu.html" class="block py-2 px-4 mt-4 text-indigo-600 hover:text-indigo-800 font-semibold">Về trang chủ</a>
     </aside>
 
     <!-- Main Content -->
