--- a/Shopthoitrang/dat-hang.html
+++ b/Shopthoitrang/dat-hang.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DTN Shop</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="css/trang-chu.css">
+    <link rel="stylesheet" href="css/dat-hang.css">
 </head>
 <body class="bg-gray-100 font-sans">
     <!-- Header -->
