--- a/Shopthoitrang/chi-tiet-don-hang.html
+++ b/Shopthoitrang/chi-tiet-don-hang.html
@@ -3,126 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chi tiết sản phẩm - DTN Shop</title>
-    <link rel="stylesheet" href="/Shopthoitrang/css/chi-tiet-san-pham.css">
-    <style>
-        .ctsp-anh img { width: 100%; max-width: 300px; height: auto; }
-        .ctsp-thong-tin { margin-top: 20px; }
-        .ctsp-gia { font-size: 1.5em; color: #e74c3c; }
-        .ctsp-mo-ta { margin: 10px 0; }
-        .ctsp-btn button { background-color: #007bff; color: white; padding: 10px 20px; border: none; cursor: pointer; margin-right: 10px; }
-        .ctsp-btn button:hover { background-color: #0056b3; }
-        #toast { position: fixed; bottom: 20px; right: 20px; background-color: #333; color: white; padding: 10px 20px; display: none; z-index: 1000; }
-    </style>
+    <title>Chi tiết đơn hàng - DTN Shop</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="css/chi-tiet-san-pham.css">
 </head>
-<body>
-    <header>
-        <h1>SHOP QUẦN ÁO ONLINE</h1>
-        <nav>
-            <a href="/Shopthoitrang/trang-chu.html">Trang chủ</a> |
-            <a href="/Shopthoitrang/gio-hang.html">Giỏ hàng</a> |
-            <a href="/Shopthoitrang/chi-tiet-san-pham.html">Lịch sử đơn hàng</a>
-        </nav>
+<body class="bg-gray-100 font-sans">
+    <!-- Header -->
+    <header class="bg-black text-white">
+        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+            <h1 class="text-2xl font-bold">DTN Shop</h1>
+            <nav class="space-x-4">
+                <a href="/Shopthoitrang/trang-chu.html" class="text-white hover:text-gray-200">Trang chủ</a> |
+                <a href="/Shopthoitrang/dat-hang.html" class="text-white hover:text-gray-200">Sản phẩm</a> |
+                <a href="/Shopthoitrang/gio-hang.html" class="text-white hover:text-gray-200">Giỏ hàng</a>
+            </nav>
+            <div class="space-x-4">
+                <a href="#" class="text-white hover:text-gray-200">Đăng nhập</a>
+                <a href="admin-products.html" class="text-white hover:text-gray-200">Quản trị</a>
+            </div>
+        </div>
     </header>
-    <main>
-        <div id="chi-tiet-san-pham"></div>
-    </main>
-    <div id="toast"></div>
+
+    <!-- Main Content -->
+    <section class="container mx-auto px-4 py-8">
+        <div id="productDetail" class="bg-white shadow-md rounded-lg p-6 max-w-2xl mx-auto">
+            <h2 class="text-2xl font-bold mb-4">Chi tiết sản phẩm</h2>
+            <p id="detailMessage" class="text-red-500">Đang tải...</p>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-black text-white py-4 mt-8">
+        <div class="container mx-auto px-4 text-center">
+            <p>© 2025 DTN Shop. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <!-- JavaScript -->
     <script>
-
-        async function getDanhSachSanPham() {
-            try {
-                const response = await fetch('http://127.0.0.1:5000/sanpham');
-                if (!response.ok) throw new Error('Lỗi khi lấy danh sách sản phẩm');
-                const data = await response.json();
-                return data.length > 0 ? data : danhSachSanPhamTinh;
-            } catch (error) {
-                console.error('Lỗi API getDanhSachSanPham:', error);
-                return danhSachSanPhamTinh;
-            }
-        }
-
-        function getGioHang() {
-            return JSON.parse(localStorage.getItem('gioHang') || '[]');
-        }
-
-        function setGioHang(gio) {
-            localStorage.setItem('gioHang', JSON.stringify(gio));
-        }
-
-        function dinhDangGia(gia) {
-            return new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(gia);
-        }
-
-        // Mã từ chi-tiet-san-pham.js
-        let dsSanPham = [];
-
-        async function fetchSanPham() {
-            dsSanPham = await getDanhSachSanPham();
-        }
-
-        function getIdSanPham() {
-            const params = new URLSearchParams(window.location.search);
-            return parseInt(params.get('id'), 10);
-        }
-
-        function hienThiChiTietSanPham() {
-            const id = getIdSanPham();
-            const sp = dsSanPham.find(x => x.id_san_pham === id);
-            const container = document.getElementById('chi-tiet-san-pham');
-            if (!sp) {
-                container.innerHTML = `<div style="padding:32px;text-align:center;color:#d76d77;font-weight:bold;">Không tìm thấy sản phẩm!</div>`;
+        async function fetchProductDetail() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const productId = urlParams.get('id');
+            if (!productId) {
+                document.getElementById('detailMessage').textContent = 'Không tìm thấy ID sản phẩm.';
                 return;
             }
-            container.innerHTML = `
-                <div class="ctsp-anh">
-                    <img src="${sp.hinh_anh}" alt="${sp.ten_san_pham}">
-                </div>
-                <div class="ctsp-thong-tin">
-                    <h2>${sp.ten_san_pham}</h2>
-                    <div class="ctsp-gia">${dinhDangGia(sp.gia)}</div>
-                    <div class="ctsp-mo-ta">${sp.mo_ta || "Chưa có mô tả chi tiết cho sản phẩm này."}</div>
-                    <div class="ctsp-btn">
-                        <button onclick="themVaoGio(${sp.id_san_pham})">Thêm vào giỏ</button>
-                        <button onclick="window.history.back()">Quay lại</button>
-                    </div>
-                </div>
-            `;
-        }
 
-        function showToast(msg) {
-            const toast = document.getElementById('toast');
-            toast.innerText = msg;
-            toast.style.display = 'block';
-            toast.style.opacity = '1';
-            setTimeout(() => {
-                toast.style.transition = 'opacity 0.4s';
-                toast.style.opacity = '0';
-            }, 1400);
-            setTimeout(() => {
-                toast.style.display = 'none';
-                toast.style.transition = '';
-            }, 1900);
-        }
+            try {
+                const response = await fetch(`http://127.0.0.1:5000/sanpham/${productId}`);
+                if (!response.ok) throw new Error('Không thể lấy dữ liệu sản phẩm');
+                const product = await response.json();
 
-        function themVaoGio(idSanPham) {
-            let gio = getGioHang();
-            let daCo = gio.find(item => item.id_san_pham === idSanPham);
-            if (daCo) {
-                daCo.so_luong += 1;
-            } else {
-                gio.push({ id_san_pham: idSanPham, so_luong: 1 });
+                const detailDiv = document.getElementById('productDetail');
+                detailDiv.innerHTML = `
+                    <img src="${product.hinh_anh || '/images/default.jpg'}" alt="${product.ten_san_pham}" class="w-full max-h-96 object-contain mb-4 rounded-md" onerror="this.src='/images/default.jpg';">
+                    <h3 class="text-xl font-semibold">${product.ten_san_pham}</h3>
+                    <p class="text-gray-600">Giá: ${product.gia.toLocaleString('vi-VN')} VNĐ</p>
+                    <p class="text-gray-600">Số lượng còn lại: ${product.so_luong}</p>
+                    <p class="text-gray-600">Danh mục: ${product.id_danh_muc}</p>
+                    <button class="mt-4 bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600" onclick="addToCart(${product.id_san_pham}, 1)">Thêm vào giỏ</button>
+                `;
+            } catch (error) {
+                console.error('Lỗi khi lấy chi tiết sản phẩm:', error);
+                document.getElementById('detailMessage').textContent = 'Lỗi khi tải chi tiết sản phẩm.';
             }
-            setGioHang(gio);
-            showToast('Đã thêm sản phẩm vào giỏ!');
         }
 
-        window.themVaoGio = themVaoGio;
+        async function addToCart(productId, quantity) {
+            const cartItem = {
+                id_gio_hang: Date.now(),
+                id_khach_hang: 1,
+                id_san_pham: productId,
+                so_luong: quantity,
+                ngay_them: new Date().toISOString().split('T')[0]
+            };
 
-        document.addEventListener('DOMContentLoaded', async () => {
-            await fetchSanPham();
-            hienThiChiTietSanPham();
-        });
+            try {
+                const response = await fetch('http://127.0.0.1:5000/giohang', {
+                    method: 'POST',
+                    headers: {'Content-Type': 'application/json'},
+                    body: JSON.stringify(cartItem)
+                });
+                const result = await response.json();
+                alert(result.message || 'Thêm vào giỏ hàng thất bại');
+            } catch (error) {
+                console.error('Lỗi:', error);
+                alert('Thêm vào giỏ hàng thất bại');
+            }
+        }
+
+        document.addEventListener('DOMContentLoaded', fetchProductDetail);
     </script>
 </body>
 </html>
